<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_fridge"
        android:icon="@drawable/ic_fridge"
        android:title="@string/title_fridge" />
    <item
        android:id="@+id/navigation_shoppinglist"
        android:icon="@drawable/ic_shoppinglist"
        android:title="@string/title_shopping_list" />
    <item
        android:id="@+id/navigation_suggestion"
        android:icon="@drawable/ic_suggestion"
        android:title="@string/title_suggestion" />
    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_recipes"
        android:title="@string/title_recipes" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>